# hermes-nutrition-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  HERMES_AGENT_INSTRUCTIONS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py  auth.py  config.py  db.py  exports.py  main.py  models.py  tables.py  tools.py
tests/: conftest.py  test_auth.py  test_config.py  test_service.py  test_tables.py
unraid-template/: nutrition-mcp.xml
