[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition-mcp"
version = "0.3.0"
description = "Dockerized HTTP MCP server for local-first nutrition tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.27,<2",
  "uvicorn[standard]>=0.30",
  "starlette>=0.37",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
